completed ads lec

--- a/src/main/resources/templates/ads/ad.html
+++ b/src/main/resources/templates/ads/ad.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 <h1>Hello, <span th:text="${ads}">World</span>!</h1>
+<div th:each="ad : ${ads}">
+    <img th:each="image: ${ad.getImages()}" th:src="@{${image.imageURL}}" alt="ad image" />
+    <h1 th:text="${ad.title}"></h1>
+    <p th:text="${ad.description}"></p>
+
+</div>
 </body>
 </html>
