--- a/src/main/resources/templates/Users/sign-up.html
+++ b/src/main/resources/templates/Users/sign-up.html
@@ -14,9 +14,9 @@
     <input id="email" th:field="*{email}" />
 
     <label for="password">Password</label>
-    <input id="password" type="password" th:field="*{password}" />
+    <input id="password" th:field="*{password}" type="password"/>
 
-    <input value="Sign me up!" type="submit" />
+    <input value="Sign up now!" type="submit" />
 </form>
 </body>
 </html>
