--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -5,7 +5,7 @@
   <title>Create</title>
 </head>
 <body>
-<form method="POST" action="/posts/create" th:object="${post}">
+<form th:method="POST" th:action="@{/posts/create}" th:object="${post}">
   <h1>Create New Post</h1>
   <label for="title">Title: </label>
   <input type="text" th:field="*{title}" id="title">
